<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE9D5"
    android:theme="@style/ThemeOverlay.TicTacToe.FullscreenContainer"
    tools:context=".MainMenuActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="308dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/close_256" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.995"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/tube_256" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="413dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.788">

                <TextView
                    android:id="@+id/fullscreen_content"
                    android:layout_width="230dp"
                    android:layout_height="61dp"
                    android:fontFamily="@font/lobster"
                    android:gravity="center"
                    android:keepScreenOn="true"
                    android:scaleX="0"
                    android:scaleY="0"
                    android:text="Tic Tac Toe"
                    android:textColor="#617143"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/menu_start_game_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="237dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/righteous"
                    android:scaleX="0"
                    android:scaleY="0"
                    android:text="@string/menu_new_game"
                    android:textColor="#7A3E65"
                    android:textSize="20sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullscreen_content"
                    app:strokeColor="@color/black" />

                <Button
                    android:id="@+id/menu_statistics_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="237dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/righteous"
                    android:scaleX="0"
                    android:scaleY="0"
                    android:text="@string/menu_statistics"
                    android:textColor="#7A3E65"
                    android:textSize="20sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/menu_start_game_button"
                    app:strokeColor="@color/black" />

                <Button
                    android:id="@+id/menu_settings_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="237dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/righteous"
                    android:scaleX="0"
                    android:scaleY="0"
                    android:text="@string/menu_settings"
                    android:textColor="#7A3E65"
                    android:textSize="20sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/menu_statistics_button"
                    app:strokeColor="@color/black" />

                <Button
                    android:id="@+id/menu_exit_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="237dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/righteous"
                    android:scaleX="0"
                    android:scaleY="0"
                    android:text="@string/menu_exit"
                    android:textColor="#7A3E65"
                    android:textSize="20sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/menu_settings_button"
                    app:strokeColor="@color/black" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</FrameLayout>